samples/_failures_safe/1761128004_0f89eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73fe1071.c: In function ‘print_token’:
./samples/SAFE/__tmp_73fe1071.c:177:9: error: expected declaration or statement at end of input
  177 |         case TOKEN_UNKNOWN:
      |         ^~~~
./samples/SAFE/__tmp_73fe1071.c:177:9: error: expected declaration or statement at end of input
